added and styled nav bar

--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>My Website</title>
+        <title>Kevin McElhinney</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Hello World!</h1>
-        <script src="script.js"></script>
+        <div class="nav">
+            <a class="active" href="#home">Projects</a>
+            <a href="#about">About</a>
+          </div>
+
     </body>
 </html>
