--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         <div class = "topHalf">
             <h1>My Projects</h1>
             <img src="images/UNR_Biometics_Project.png" alt="Image of face comparison graphical user interface">
+            <figcaption>Celeberty Face Comparison</figcaption>
+            <img src="images/mitosis.png" alt="Image of the stages of mitosis">
+            <figcaption>Mitosis Simulator</figcaption>
+
         </div>
         <div class = "bottomHalf">
             <h1>Kevin McElhinney</h1>
