--- a/index.html
+++ b/index.html
@@ -50,29 +50,36 @@
 
         </div>
         <div class="bottom">
-            <h1>How to Contact Me!</h1>
+            <div class="bottomHeader">
+                <h1>How to Contact Me!</h1>
+            </div>
             <div class="social">
                 <h3>Online</h3>
             </div>
             <div class="contact">
-                <form action="action_page.php">
+                <div id="contactHeader">
+                    <h3>Send Me A Message</h3>
+                </div>
+                <div class="form">
+                    <form action="action_page.php">
 
-                    <label for="fname">First Name</label>
-                    <input type="text" id="fname" name="firstname" placeholder="Your name..">
+                        <label for="fname">First Name</label>
+                        <input type="text" id="fname" name="firstname" placeholder="Your name..">
 
-                    <label for="lname">Last Name</label>
-                    <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+                        <label for="lname">Last Name</label>
+                        <input type="text" id="lname" name="lastname" placeholder="Your last name..">
 
-                    <label for="return">Return Email Adress</label>
-                    <input type="text" id="return" name="return" placeholder="Your return email address...">
+                        <label for="return">Return Email Adress</label>
+                        <input type="text" id="return" name="return" placeholder="Your return email address...">
 
-                    <label for="subject">Subject</label>
-                    <textarea id="subject" name="subject" placeholder="Write something.."
-                        style="height:200px"></textarea>
+                        <label for="subject">Subject</label>
+                        <textarea id="subject" name="subject" placeholder="Write something.."
+                            style="height:200px"></textarea>
 
-                    <input type="submit" value="Submit">
+                        <input type="submit" value="Submit">
 
-                </form>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
