added html and css attribution comments

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- html for nav bar and contact form was found at W3Schools.com-->
 <html lang="en">
 
 <head>
@@ -58,7 +59,7 @@
             </div>
             <div class="contact">
                 <div id="contactHeader">
-                    <h3>Send Me A Message</h3>
+                    <h2>Send Me A Message</h2>
                 </div>
                 <div class="form">
                     <form action="action_page.php">
@@ -72,9 +73,9 @@
                         <label for="return">Return Email Adress</label>
                         <input type="text" id="return" name="return" placeholder="Your return email address...">
 
-                        <label for="subject">Subject</label>
-                        <textarea id="subject" name="subject" placeholder="Write something.."
-                            style="height:200px"></textarea>
+                        <label for="message">Message:</label>
+                        <textarea id="message" name="message" placeholder="Write something.."
+                            style="height:100px"></textarea>
 
                         <input type="submit" value="Submit">
 
