--- a/index.html
+++ b/index.html
@@ -52,10 +52,13 @@
         </div>
         <div class="bottom">
             <div class="bottomHeader">
-                <h1>How to Contact Me!</h1>
+                <h1>Find Out More!</h1>
             </div>
             <div class="social">
-                <h3>Online</h3>
+                <h2>Online</h2>
+            </div>
+            <div class="socialIcons">
+
             </div>
             <div class="contact">
                 <div id="contactHeader">
