--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
             </div>
             <div class="social">
                 <h2>Online</h2>
-            </div>
-            <div class="socialIcons">
-
+                <a href="https://github.com/kmcelhinney09" target="_blank">
+                    <img src="images/github.png" alt="GitHub Icon" width="100">
+                </a>
             </div>
             <div class="contact">
                 <div id="contactHeader">
