--- a/index.html
+++ b/index.html
@@ -37,15 +37,13 @@
             </div>
             <div class="aboutMe">
                 <p>
-                    I am a 38 year old husband and father of 3. I have taught science from the 7th to 12th grade level
-                    for 9 years, and computer science for 2 years. In preping for teaching and continuing my education I
-                    fell
-                    in love with the way computers work, raspberry pi's, microcontrolers, and especially computer
-                    programing.
-                    I am a person whose hobbies revolve around creation. I love programing, doing art, metal and
-                    woodwork, and
-                    making things with electronics because it allows me to blend my passion of creation with that of
-                    electronics.
+                    I am a 38-year-old husband and father of 3. I have taught science from the 7th to 12th-grade level
+                    for 9 years, and computer science for 2 years. In prepping for teaching and continuing my education
+                    I fell in love with the way computers work, raspberry pi's, microcontrollers, and especially
+                    computer programing.
+                    I am a person whose hobbies revolve around creation. I love programing, doing art, metal/woodwork,
+                    and making things with electronics because it allows me to blend my passion for creation with that
+                    of electronics.
                 </p>
             </div>
 
