added my name to nav bar

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 
 <body>
     <div class="nav">
-        <a class="active" href="#home">Projects</a>
+        <a class="active" href="#projectHeader">Projects</a>
         <a href="#about">About</a>
+        <a href="#contactHeader">Discover More</a>
+        <h1>Kevin McElhinney</h1>
     </div>
     <div class="grid-container">
         <div class="top">
