added javascript to fade image with mouse over

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+
     <div class="nav">
         <a class="active" href="#projectHeader">Projects</a>
         <a href="#about">About</a>
@@ -18,15 +19,16 @@
         <div class="top">
             <h1 id="projectHeader">My Projects</h1>
             <div class="project1">
-                <img src="images/UNR_Biometics_Project.png" alt="Image of face comparison graphical user interface">
+                <img src="images/UNR_Biometics_Project.png" alt="Image of face comparison graphical user interface"
+                    id="project1">
                 <figcaption>Celeberty Face Comparison</figcaption>
             </div>
             <div class="project2">
-                <img src="images/mitosis.png" alt="Image of the stages of mitosis">
+                <img src="images/mitosis.png" alt="Image of the stages of mitosis" id="project2">
                 <figcaption>Mitosis Simulator</figcaption>
             </div>
             <div class="project3">
-                <img src="images/BugTracker.jpg" alt="Drawing of a bug under a magnifying glass">
+                <img src="images/BugTracker.jpg" alt="Drawing of a bug under a magnifying glass" id="project3">
                 <figcaption>Bug Tracker</figcaption>
             </div>
 
@@ -90,7 +92,7 @@
 
 
 
-
+    <script src="script.js"></script>
 </body>
 
 </html>
