updated script.js, created contact.html and contactScript.js

--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
         <div class="top">
             <h1 id="projectHeader">My Projects</h1>
             <div class="project1">
-                <img src="images/UNR_Biometics_Project.png" alt="Image of face comparison graphical user interface"
+                <a href="https://github.com/kmcelhinney09/RET2021" target="_blank">
+                    <img src="images/UNR_Biometics_Project.png" alt="Image of face comparison graphical user interface"
                     id="project1">
+                </a>
                 <figcaption>Celeberty Face Comparison</figcaption>
+                
             </div>
             <div class="project2">
                 <img src="images/mitosis.png" alt="Image of the stages of mitosis" id="project2">
@@ -67,13 +70,10 @@
                     <h2>Send Me A Message</h2>
                 </div>
                 <div class="form">
-                    <form action="action_page.php">
+                    <form action="Contact.html" target="_blank">
 
-                        <label for="fname">First Name</label>
-                        <input type="text" id="fname" name="firstname" placeholder="Your name..">
-
-                        <label for="lname">Last Name</label>
-                        <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+                        <label for="name">Name</label>
+                        <input type="text" id="name" name="name" placeholder="Your name..">
 
                         <label for="return">Return Email Adress</label>
                         <input type="text" id="return" name="return" placeholder="Your return email address...">
