changed backgroud color of active nav link

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
 
     <div class="nav">
-        <a class="active" href="#projectHeader">Projects</a>
-        <a href="#about">About</a>
-        <a href="#contactHeader">Discover More</a>
+        <a class="active" href="#projectHeader" id="projectLink">Projects</a>
+        <a href="#about" id="aboutLink">About</a>
+        <a href="#contactHeader" id="contactLink">Discover More</a>
         <h1>Kevin McElhinney</h1>
     </div>
     <div class="grid-container">
