--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
                 <a href="https://github.com/kmcelhinney09" target="_blank">
                     <img src="images/github.png" alt="GitHub Icon" width="100">
                 </a>
+                <a href="https://www.linkedin.com/in/kevin-mcelhinney-53a97619/" target="_blank">
+                    <img src="images/LinkedIn.png" alt="LinkedIn Icon" width="100" height="95">
+                </a>
             </div>
             <div class="contact">
                 <div id="contactHeader">
@@ -93,6 +96,7 @@
 
 
     <script src="script.js"></script>
+    
 </body>
 
 </html>
